# data

./: Makefile  pyproject.toml
analysis/: README.md  flake.nix  pyproject.toml
analysis/analysis/: __init__.py
analysis/analysis/io/: logfile.py
analysis/analysis/plot/: figure.py
analysis/analysis/proc/: __init__.py  dataset.py  ds.py  experiment.py  frame.py  iteration.py
analysis/xa/draw/: plot.py
analysis/xa/io/: src.py
analysis/xa/proc/: ds.py  exp.py  frame.py  ms.py
apispec/: lakeside.yml  robotshop.yml  sockshop.yml
benchmark/010823-174610-sockshop-1h-50/: workflow-16m.yml  workflow-2m.yml  workflow-45m.yml
benchmark/010823-174615-sockshop-test-1h-100/: workflow.yml
benchmark/010823-174620-sockshop-test-1h-200/: workflow.yml
benchmark/092223-140000-sockshop-1h-noscale/: line.ipynb  preproc.ipynb  workflow-1h-i2.yml
benchmark/100223-152500-sockshop-30m-noscale/: line.ipynb  workflow-30m-i1.yml  workflow-30m-i3.yml  workload.yml
benchmark/230723-075958-sockshop-test/: workflow.yml
benchmark/230801-174610-sockshop-1h-50/: workflow-1h-1m.yml  workflow-30m.yml
benchmark/230922-140000-sockshop-1h-noscale/: bar.ipynb  workload.yml
benchmark/231002-152500-sockshop-30m-noscale/: bar.ipynb  preproc.ipynb  workflow-30m-i2.yml
benchmark/231105-145900-sockshop-1h-asym/: ac.1h.unzip.trace  proc.ipynb  sockshop-2023-11-05T15-27-22.visual.ipynb  visual.ipynb  work.1h.unzip.yml
benchmark/231112-171300-sockshop-15m-asym/: flow.15m.zip.yml
benchmark/290723-185525-robotshop-test/: workflow.yml
benchmark/300723-105348-lakeside-test/: workflow.yml
benchmark/sockshop-1h-unscaled/: sockshop.yml  workflow-1h-i1.yml  workflow-1h-i3.yml
benchmark/sockshop-2023-11-05T14-59-00-1h/: flow.1h.unzip.yml
trace/: fifa.clean.csv  fifa.icse.1h.csv  fifa.icse.30m.csv  fifa.icse.5m.csv  fifa.interval.csv
(+130 files in other folders)
