[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
jupyterlab = "^4.0.3"
pyyaml = "^6.0"
plotly = "^5.15.0"
import-ipynb = "^0.1.4"
kaleido = "0.2.1"
black = "^23.7.0"
dataframe-image = "^0.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
