[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["resu-gh <9valentino4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
jupyter = "^1.0.0"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 150
